add example to send email for prod env using smtp

--- a/Send Email in Django using Mailtrap/.env
+++ b/Send Email in Django using Mailtrap/.env
@@ -1,3 +1,7 @@
 EMAIL_TEST_HOST_USER = ""
 EMAIL_TEST_HOST_PASSWORD = ""
 EMAIL_TEST_PORT = ""
+
+EMAIL_HOST_USER = ""
+EMAIL_HOST_PASSWORD = ""
+EMAIL_PORT = ""
